taille des photos

--- a/photographer.html
+++ b/photographer.html
@@ -35,7 +35,13 @@
 
         <!--Présentation des médias du photographe-->
         <section class="media_photographe">
-            
+            /*
+            div class media
+            div h&1 
+            div h&2
+            div P
+
+            */ 
           <!--injection des médias du photographe en JS-->
           <article class="photographer__portfolio"> </article>
       <!--<div class="photographerImages"> -->
@@ -106,5 +112,5 @@
   </body>
 </html>
 
-<script type="text/javascript" src="scripts/pages/photographer.js"></script>
+<script type="text/javascript" src="scripts/pages/each-photographer.js"></script>
 
