fleches de la flexbox

--- a/photographer.html
+++ b/photographer.html
@@ -115,17 +115,17 @@
             <!--injection des médias du photographe en JS-->
         </div>
        <!--Croix pour fermer au clic la lightbox-->
-            <button class="close_lightbox" aria-label="Close dialog">
+            <div class="close_lightbox" aria-label="Close dialog">
                 <span class="fas fa-times "></span>
-            </button>
+            </div>
        <!--flèche pour passer au média précédent-->
-            <button class="arrow_left" role="link" aria-label="Previous image">
+            <div class="arrow_left" role="link" aria-label="Previous image">
                 <span class="fas fa-angle-left"></span>
-            </button>
+            </div>
               <!--Croix pour passer au média suivant-->
-            <button class="arrow_right" role="link" aria-label="Next image">
+            <div class="arrow_right" role="link" aria-label="Next image">
                 <span class="fas fa-angle-right"></span>
-            </button>
+            </div>
       </div>
     </div>
     <script src="/scripts/utils/contactForm.js"></script>
