--- a/photographer.html
+++ b/photographer.html
@@ -55,6 +55,7 @@
 				<header>
           <h2 class="title-photographe">Contactez-moi</h2>
           <img src="assets/icons/close.svg" onclick="closeModal()" />
+          <p class="photographer__h1"></p>
         </header>
 				<form>
 					<div>
@@ -101,14 +102,6 @@
 				</form>
 			</div>
 		</div>
-    <!-- <div class=" lightbox">
-      <img class="img-lightbox" src="">
-      
-      <i class="fas fa-xmark"></i>
-      <i class="fas fa-angle-left"></i>
-      <i class="fas fa-angle-right"></i>
-      
-    </div> -->
     <div class="lightbox_container" role="dialog" aria-label="image closeup view">
       <div class=" lightbox">
         <div class="lightbox_media_box">
