--- a/photographer.html
+++ b/photographer.html
@@ -46,6 +46,9 @@
         </div>
   
         </section>
+        <div id="likes_price">
+          <!--injection de la bannière total des likes et tarif du photographe par jour-->
+        </div>
        
     </main>
     <!--Formulaire de contact-->
